# CrumpleQuest

./: .gitignore  CMakeLists.txt  INFO.md  README.md  TODO.md  line_count.py  line_counter.py  package.ps1  thanks-isaac.txt
include/: CMakeLists.txt
scripts/: ear_clipping.py  funnel.py  geometry.py  graph.py  line_counter.py  room_gen.py
shaders/: 13_instance.vert  background.frag  default.frag  instance.frag  instance.vert  instance2D.frag  instance2D.vert
src/: main.cpp  physics.h  solver.cpp  solver.h  solver_epa.cpp  solver_gjk.cpp  solver_sat.cpp
src/IO/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  window.cpp  window.h
src/SoA/: bodySoA.cpp  bodySoA.h  compactTensor.cpp  compactTensor.h  expandTensor.h  forceSoA.cpp  forceSoA.h  forceSoAs.h  helper.h  manifoldSoA.cpp  manifoldSoA.h  meshSoA.cpp  meshSoA.h  virtualSoA.h
src/audio/: audio_manager.cpp  audio_manager.h  audio_system.cpp  audio_system.h  audio_track.cpp  music_player.cpp  music_player.h  random_sound_container.cpp  random_sound_container.h  sfx_player.cpp  sfx_player.h  sound.cpp  sound.h
src/character/: ai.cpp  ai.h  attackAction.cpp  attackAction.h  attackActions.cpp  attackActions.h  behavior.cpp  behavior.h  behaviors.cpp  behaviors.h  boss.cpp  boss.h  character.cpp  character.h  enemy.cpp  enemy.h  enemy_static.cpp  moveAction.cpp  moveAction.h  moveActions.cpp  moveActions.h  player.cpp  player.h
src/crumpleQuest/: game.cpp  game.h
src/crumpleQuest/character/: ai.h  character.cpp  character.h  enemy.cpp  enemy.h  player.cpp  player.h
src/crumpleQuest/damageZone/: contactZone.h  projectileZone.h
src/crumpleQuest/levels/: floor.cpp  floor.h  levels.h  navmesh.cpp  navmesh.h  paper.cpp  paper.h  singleSide.cpp  singleSide.h
src/crumpleQuest/movement/: movement.h
src/damageZone/: damageZone.h
src/engine/: engine.cpp  engine.h
src/forces/: force.cpp  force.h  manifold.cpp  manifold.h
src/game/: game.cpp  game.h  paperView.cpp  paperView.h
src/instance/: instanceHandler.h  instancer.h  instancer.tpp
src/levels/: dymesh.cpp  dymesh.h  edger.cpp  edger.h  floor.cpp  floor.h  floor_templates.cpp  fold.cpp  levels.h  navmesh.cpp  navmesh.h  navmesh_static.cpp  obstacle.h  paper.cpp  paper.h  paperMesh.cpp  paperMesh.h  paperMesh_static.cpp  paper_static.cpp  paper_sub.cpp  paper_templates.cpp  singleSide.cpp  singleSide.h  singleSide_static.cpp  triangle.cpp  triangle.h  uvregion.cpp  uvregion.h
src/node2d/: node.cpp  node.h
src/nodes/: node.cpp  node.h  node2d.cpp  node2d.h  nodeHandler.cpp  nodeHandler.h  virtualNode.h  virtualNode.tpp
src/pickup/: heart.cpp  heart.h  ladder.cpp  ladder.h  pickup.cpp  pickup.h  scissor.cpp  scissor.h  stapleGun.cpp  stapleGun.h
src/render/: ebo.cpp  ebo.h  image.cpp  image.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  textureArray.cpp  textureArray.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/resource/: animation.h  animator.cpp  animator.h
src/scene/: basilisk.h  camera.cpp  camera.h  camera2d.cpp  camera2d.h  scene.cpp  scene.h
src/shapes/: collider.cpp  collider.h  mesh.cpp  mesh.h  rigid.cpp  rigid.h
src/solver/: physics.h  solver.cpp  solver.h  solver_epa.cpp  solver_gjk.cpp  solver_pointers.cpp  solver_sat.cpp
src/tables/: MeshInstanceTable.cpp  MeshInstanceTable.h  bodySoA.cpp  bodySoA.h  bodyTable.cpp  bodyTable.h  colliderFlat.cpp  colliderFlat.h  compactTensor.cpp  eraseChunks.h  expandTensor.h  forceRoute.h  forceSoA.cpp  forceSoA.h  forceSoAs.h  forceTable.cpp  forceTable.h  manifoldSoA.cpp  manifoldSoA.h  manifoldTable.cpp  manifoldTable.h  meshFlat.cpp  meshFlat.h  meshSoA.cpp  meshSoA.h  nodeTable.cpp  nodeTable.h  virtualSoA.h  virtualTable.h
src/ui/: button.cpp  button.h  menu.cpp  menu.h  menu_manager.cpp  menu_manager.h  menu_stack.cpp  menu_stack.h  slider.cpp  slider.h  ui.h  uiElement.h
src/util/: clipper_helper.cpp  clipper_helper.h  constants.h  includes.h  indexed.h  linalg.cpp  linalg.h  maths.cpp  maths.h  print.cpp  print.h  random.cpp  random.h  time.cpp  time.h
src/weapon/: contactZone.cpp  contactZone.h  damageZone.cpp  damageZone.h  meleeZone.cpp  meleeZone.h  projectileZone.cpp  projectileZone.h  weapon.cpp  weapon.h
